--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://addons/godot-git-plugin/THIRDPARTY.md")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://addons/", "res://addons/godot-git-plugin/")
 dock_1="FileSystem,History"
 dock_2="Scene"
 dock_3="Inspector,Import,Node"
@@ -30,7 +30,7 @@ dock_3="Inspector,Import,Node"
 open_scenes=PackedStringArray("res://Assets/Scenes/Main.tscn")
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 current_scene="res://Assets/Scenes/Main.tscn"
 
 [ScriptEditor]
