--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,7 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"CharacterBody3D",
+"class": &"Player3D",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Assets/Scripts/player_controller.gd"
+}])
