--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_1_selected_tab_idx=0
+dock_1_selected_tab_idx=1
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
@@ -9,9 +9,9 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_1=-61
+dock_split_1=-72
 dock_split_2=-75
-dock_hsplit_1=343
+dock_hsplit_1=377
 dock_hsplit_2=435
 dock_hsplit_3=-270
 dock_hsplit_4=0
@@ -19,15 +19,14 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://addons/godot-git-plugin/THIRDPARTY.md")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://addons/", "res://addons/godot-git-plugin/")
-dock_1="FileSystem,History"
-dock_2="Scene"
-dock_3="Inspector,Import,Node"
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Scripts/MrManager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Assets/", "res://Assets/Scripts/", "res://Assets/Scenes/", "res://Assets/Resources/", "res://Assets/Materials and Textures/")
+dock_1="FileSystem,Scene,History"
+dock_2="Inspector,Node,Import"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Assets/Scenes/Main.tscn")
+open_scenes=PackedStringArray("res://Assets/Scenes/Main.tscn", "res://Assets/Scenes/Testing.tscn", "res://Assets/Scenes/Player3D.tscn")
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -35,10 +34,10 @@ current_scene="res://Assets/Scenes/Main.tscn"
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
-open_help=[]
-script_split_offset=70
+open_scripts=["res://Assets/Scripts/MrManager.gd", "res://Assets/Scripts/player_controller.gd"]
+selected_script="res://Assets/Scripts/MrManager.gd"
+open_help=["Player3D", "\"Assets/Scripts/MrManager.gd\"", "@GDScript", "@GlobalScope"]
+script_split_offset=236
 list_split_offset=0
 
 [ShaderEditor]
