--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,18 +1,18 @@
-[res://addons/godot-git-plugin/plugin.cfg]
+[res://Assets/Scripts/player_controller.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 66,
+"scroll_position": 66.0,
 "selection": false,
-"syntax_highlighter": "Plain Text"
+"syntax_highlighter": "GDScript"
 }
 
-[res://addons/godot-git-plugin/THIRDPARTY.md]
+[res://Assets/Scripts/MrManager.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -20,8 +20,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "Plain Text"
+"syntax_highlighter": "GDScript"
 }
